# nitai

./: .env.example  .gitignore  CLAUDE.md  Makefile  buf.gen.yaml  docker-compose.yml  go.work  go.work.sum
api-server/: CLAUDE.md  Dockerfile  go.mod  go.sum
api-server/cmd/server/: main.go
api-server/internal/config/: config.go
api-server/internal/crypto/: crypto.go  crypto_test.go
api-server/internal/db/: queries.go
api-server/internal/handler/: mapper.go  provider.go  repo.go  review.go  webhook.go  webhook_test.go
api-server/internal/provider/: provider.go
api-server/internal/restate/: client.go
api-server/migrations/: 000001_init.down.sql  000001_init.up.sql  000002_review_comments_posted.down.sql  000002_review_comments_posted.up.sql  000003_provider_soft_delete.down.sql  000003_provider_soft_delete.up.sql  000004_webhook_secret.down.sql  000004_webhook_secret.up.sql  000005_restate_invocation_id.down.sql  000005_restate_invocation_id.up.sql  000006_diff_hash.down.sql  000006_diff_hash.up.sql  000007_draft_status.down.sql  000007_draft_status.up.sql  000008_branch_indexes.down.sql  000008_branch_indexes.up.sql
e2e/: CLAUDE.md  docker-compose.e2e.yml  e2e_test.go  go.mod  go.sum  helpers.go  mock_gitlab.go  mock_llm.go
go-services/: CLAUDE.md  Dockerfile  go.mod  go.sum
indexer/: .gitignore  CLAUDE.md  Dockerfile  main.py  pyproject.toml
indexer/indexer/: git.py  indexing.py  models.py  service.py  splitter.py
reviewer/: CLAUDE.md  Dockerfile  pyproject.toml
reviewer/reviewer/: agent.py  models.py  prompt.py  service.py
search-mcp/: .env.example  CLAUDE.md  Dockerfile  client.py  pyproject.toml  server.py
specs/: CURRENT.md  e2e-cases.md  later.md  overview.md  phase1-plan.md  phase2-plan.md  phases.md  scratch.md
tests/: e2e.sh  smoke.sh  unit.sh
(+19 files in other folders)
